tests/toylang/neg/001077_mutation.toylang
program a = { if a then sleep program a = { } . sleep; } .
